// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sale event newbuilding proposals 1`] = `
Object {
  "@context": "https://schema.org",
  "@type": "SaleEvent",
  "description": "Ипотеку предоставляет банк ВТБ (ПАО). Ставка 2.9% на весь срок кредита. Первоначальный взнос от 20%, срок кредита от 1 до 30 лет. Программа действует при покупке апартаментов у партнёра банка ВТБ (ПАО) в Москве и Московской обл. Подробная информация на сайтах samolet.ru. и наш.дом.рф. Генеральная лицензия банка №1000. Предложение застройщика действует до 31.12.2021",
  "endDate": "2022-02-01T21:00:00+03:00",
  "location": Object {
    "@context": "https://schema.org",
    "@type": "Place",
    "address": Object {
      "@type": "PostalAddress",
      "addressLocality": "Москва",
      "postalCode": "115035",
      "streetAddress": "Садовническая ул., 82, с2",
    },
    "name": "Яндекс.Недвижимость",
  },
  "name": "🔔 Ипотека 2.9%",
  "startDate": "2021-12-01T21:00:00+03:00",
}
`;

exports[`sale event newbuilding proposals 2`] = `
Object {
  "@context": "https://schema.org",
  "@type": "SaleEvent",
  "description": "При покупке онлайн предоставляется скидка 110000 руб. Не суммируется со скидками и акциями.",
  "endDate": "2022-02-01T21:00:00+03:00",
  "location": Object {
    "@context": "https://schema.org",
    "@type": "Place",
    "address": Object {
      "@type": "PostalAddress",
      "addressLocality": "Москва",
      "postalCode": "115035",
      "streetAddress": "Садовническая ул., 82, с2",
    },
    "name": "Яндекс.Недвижимость",
  },
  "name": "🔔 Скидка 110 000 руб.",
  "startDate": "2021-12-01T21:00:00+03:00",
}
`;

exports[`sale event newbuilding proposals 3`] = `
Object {
  "@context": "https://schema.org",
  "@type": "SaleEvent",
  "description": "Простой способ обменять вашу старую квартиру на новую от Группы «Самолет». Обмен происходит за 60 дней. Действует в 150 городах России.",
  "endDate": "2022-02-01T21:00:00+03:00",
  "location": Object {
    "@context": "https://schema.org",
    "@type": "Place",
    "address": Object {
      "@type": "PostalAddress",
      "addressLocality": "Москва",
      "postalCode": "115035",
      "streetAddress": "Садовническая ул., 82, с2",
    },
    "name": "Яндекс.Недвижимость",
  },
  "name": "🔔 Трейд-ин",
  "startDate": "2021-12-01T21:00:00+03:00",
}
`;

exports[`sale event search default 1`] = `
Object {
  "@context": "https://schema.org",
  "@type": "SaleEvent",
  "description": "Чаты с собственником в приложении",
  "endDate": "2022-02-01T21:00:00+03:00",
  "location": Object {
    "@context": "https://schema.org",
    "@type": "Place",
    "address": Object {
      "@type": "PostalAddress",
      "addressLocality": "Москва",
      "postalCode": "115035",
      "streetAddress": "Садовническая ул., 82, с2",
    },
    "name": "Яндекс.Недвижимость",
  },
  "name": "🔔 Чаты с собственником",
  "startDate": "2021-12-01T21:00:00+03:00",
}
`;

exports[`sale event search default 2`] = `
Object {
  "@context": "https://schema.org",
  "@type": "SaleEvent",
  "description": "Безопасный онлайн показ",
  "endDate": "2022-02-01T21:00:00+03:00",
  "location": Object {
    "@context": "https://schema.org",
    "@type": "Place",
    "address": Object {
      "@type": "PostalAddress",
      "addressLocality": "Москва",
      "postalCode": "115035",
      "streetAddress": "Садовническая ул., 82, с2",
    },
    "name": "Яндекс.Недвижимость",
  },
  "name": "🔔 Онлайн показ",
  "startDate": "2021-12-01T21:00:00+03:00",
}
`;

exports[`sale event search default 3`] = `
Object {
  "@context": "https://schema.org",
  "@type": "SaleEvent",
  "description": "Видеообзоры квартир",
  "endDate": "2022-02-01T21:00:00+03:00",
  "location": Object {
    "@context": "https://schema.org",
    "@type": "Place",
    "address": Object {
      "@type": "PostalAddress",
      "addressLocality": "Москва",
      "postalCode": "115035",
      "streetAddress": "Садовническая ул., 82, с2",
    },
    "name": "Яндекс.Недвижимость",
  },
  "name": "🔔 Видеообзоры",
  "startDate": "2021-12-01T21:00:00+03:00",
}
`;

exports[`sale event search sites 1`] = `
Object {
  "@context": "https://schema.org",
  "@type": "SaleEvent",
  "description": "Чаты с застройщиком в приложении",
  "endDate": "2022-02-01T21:00:00+03:00",
  "location": Object {
    "@context": "https://schema.org",
    "@type": "Place",
    "address": Object {
      "@type": "PostalAddress",
      "addressLocality": "Москва",
      "postalCode": "115035",
      "streetAddress": "Садовническая ул., 82, с2",
    },
    "name": "Яндекс.Недвижимость",
  },
  "name": "🔔 Чаты с застройщиком",
  "startDate": "2021-12-01T21:00:00+03:00",
}
`;

exports[`sale event search sites 2`] = `
Object {
  "@context": "https://schema.org",
  "@type": "SaleEvent",
  "description": "3D туры по новостройкам",
  "endDate": "2022-02-01T21:00:00+03:00",
  "location": Object {
    "@context": "https://schema.org",
    "@type": "Place",
    "address": Object {
      "@type": "PostalAddress",
      "addressLocality": "Москва",
      "postalCode": "115035",
      "streetAddress": "Садовническая ул., 82, с2",
    },
    "name": "Яндекс.Недвижимость",
  },
  "name": "💫 3D туры",
  "startDate": "2021-12-01T21:00:00+03:00",
}
`;

exports[`sale event search sites 3`] = `
Object {
  "@context": "https://schema.org",
  "@type": "SaleEvent",
  "description": "Видеообзоры квартир",
  "endDate": "2022-02-01T21:00:00+03:00",
  "location": Object {
    "@context": "https://schema.org",
    "@type": "Place",
    "address": Object {
      "@type": "PostalAddress",
      "addressLocality": "Москва",
      "postalCode": "115035",
      "streetAddress": "Садовническая ул., 82, с2",
    },
    "name": "Яндекс.Недвижимость",
  },
  "name": "✅ Видеообзоры",
  "startDate": "2021-12-01T21:00:00+03:00",
}
`;
